update performance results for apim 3.1.0